samples/_failures_safe/1761650790_dc624a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9af11298.c: In function ‘main’:
./samples/SAFE/__tmp_9af11298.c:151:20: error: missing terminating " character
  151 |             printf("Invalid
      |                    ^~~~~~~~
./samples/SAFE/__tmp_9af11298.c:151:13: error: expected expression at end of input
  151 |             printf("Invalid
      |             ^~~~~~
./samples/SAFE/__tmp_9af11298.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9af11298.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9af11298.c:151:13: error: expected declaration or statement at end of input
